--- a/app/src/main/res/layout/icon_list.xml
+++ b/app/src/main/res/layout/icon_list.xml
@@ -11,6 +11,7 @@
 <!--        android:layout_height="150dp"-->
 <!--        android:layout_marginTop="54dp"-->
 <!--        android:backgroundTint="#8EDCFF"-->
+   <!--        hahahahahahahahahahahahahaha-->
 
 <!--        app:layout_constraintEnd_toEndOf="parent"-->
 <!--        app:layout_constraintHorizontal_bias="0.159"-->
